# unifi_python_api

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  pythonpackage.yml
src/unifi_api/: .api.py.swp  __init__.py  api.py  base_api.py
src/unifi_api/utils/: decorators.py  exceptions.py  models.py
tests/: config.json.example  test_controller_calls.py  test_unit_calls.py
unifi_api/: base_api.py
unifi_api/utils/: __init__.py
